renamed to validateContent
Signed-off-by: Frank Gasdorf <fgdrf@users.sourceforge.net>