@@ -4,9 +4,9 @@ import static org.osgi.framework.Constants.BUNDLE_CLASSPATH;
 import static org.osgi.framework.Constants.BUNDLE_VERSION;
 
 import java.io.File;
-import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
@@ -49,20 +49,14 @@ public class OsgiManifest {
     private OsgiManifest(InputStream stream, String location) throws OsgiManifestParserException {
         this.location = location;
         try {
-            List<String> content = getContent(location);
-
-            String lastLine = content.get(content.size() - 1);
-
-            if (!lastLine.matches("\\s+")) {
-                throw new OsgiManifestParserException(location, "Header must be terminated by a line break");
-            }
+            validateContent(location);
 
             this.headers = Headers.parseManifest(stream);
             // this will do more strict validation of headers on OSGi semantical level
             BundleDescription bundleDescription = StateObjectFactoryImpl.defaultFactory.createBundleDescription(null,
                     headers, location, 0L);
             this.bundleSymbolicName = bundleDescription.getSymbolicName();
-        } catch (Exception e) {
+        } catch (BundleException e) {
             throw new OsgiManifestParserException(location, e);
         }
         this.bundleVersion = parseBundleVersion();
@@ -71,18 +65,22 @@ public class OsgiManifest {
         this.executionEnvironments = parseExecutionEnvironments();
     }
 
-    static List<String> getContent(String location) throws IOException {
+    static void validateContent(String location) throws OsgiManifestParserException {
         List<String> result = new ArrayList<>();
         URL locationURL = null;
         File file = new File(location);
 
-        if (file.exists()) {
-            locationURL = new URL(file.toURL().toExternalForm());
-        } else if (location.contains(".jar!/")) {
-            //might be a jar with inner File
-            locationURL = new URL("jar:file:/" + location.replace("\\", "/"));
-        } else {
-            locationURL = new URL(UrlUtils.normalizeUrlPath(location));
+        try {
+            if (file.exists()) {
+                locationURL = new URL(file.toURL().toExternalForm());
+            } else if (location.contains(".jar!/")) {
+                //might be a jar with inner File
+                locationURL = new URL("jar:file:/" + location.replace("\\", "/"));
+            } else {
+                locationURL = new URL(UrlUtils.normalizeUrlPath(location));
+            }
+        } catch (MalformedURLException e) {
+            throw new OsgiManifestParserException(location, e);
         }
         try (InputStreamReader reader = new InputStreamReader(locationURL.openStream(), Charset.forName("UTF-8"))) {
             StringBuffer sb = new StringBuffer();
@@ -98,10 +96,15 @@ public class OsgiManifest {
             result.add(sb.toString() + "\n");
 
         } catch (Exception e) {
-            throw new IOException("unable to read from location [" + location + "]", e);
+            throw new OsgiManifestParserException(location, e);
         }
 
-        return result;
+        String lastLine = result.get(result.size() - 1);
+
+        if (!lastLine.matches("\\s+")) {
+            throw new OsgiManifestParserException(location, "Header must be terminated by a line break");
+        }
+
     }
 
     private StandardExecutionEnvironment[] parseExecutionEnvironments() {
